Refactor Details Service

--- a/config/routes/search/v1/search.yaml
+++ b/config/routes/search/v1/search.yaml
@@ -9,7 +9,7 @@ search:
 details:
     methods:
         - GET
-    path: /search/food/{food}/details
+    path: /search/details/{id}/
     controller: App\Controller\Search\DetailsController
     options:
         expose: true
